RESOLVED FIXED 113600
[CSS Exclusions] shape-outside on floats fails to respect shape-margin's vertical extent
https://bugs.webkit.org/show_bug.cgi?id=113600
Summary [CSS Exclusions] shape-outside on floats fails to respect shape-margin's vert...
Hans Muller
Reported 2013-03-29 13:10:56 PDT
Lines of text that fall below a shape-outside don't conform to the shape-margin boundary. See that attached test case and screenshot.
Attachments
Test case. (2.60 KB, text/html)
2013-03-29 13:11 PDT, Hans Muller
no flags
Test case screenshot. (30.98 KB, image/png)
2013-03-29 13:14 PDT, Hans Muller
no flags
Test case. (2.61 KB, text/html)
2013-03-29 13:15 PDT, Hans Muller
no flags
Patch (21.36 KB, patch)
2013-03-29 18:38 PDT, Hans Muller
krit: review+
krit: commit-queue-
Patch (21.36 KB, patch)
2013-04-01 12:06 PDT, Hans Muller
no flags
Hans Muller
Comment 1 2013-03-29 13:11:24 PDT
Created attachment 195783 [details] Test case.
Hans Muller
Comment 2 2013-03-29 13:14:42 PDT
Created attachment 195785 [details] Test case screenshot.
Hans Muller
Comment 3 2013-03-29 13:15:31 PDT
Created attachment 195786 [details] Test case. Corrected a typo in the test cases's descriptive text.
Hans Muller
Comment 4 2013-03-29 18:38:00 PDT
Dirk Schulze
Comment 5 2013-04-01 11:35:30 PDT
Comment on attachment 195835 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=195835&action=review LGTM. Just some snippets. > Source/WebCore/ChangeLog:9 > + ExclusionShapeOutsideInfo classes should depend on the ExclusionShape's margin boundary. Added "boundary. A" unnecessary whitespace. > Source/WebCore/rendering/ExclusionShapeInsideInfo.h:101 > + virtual FloatRect computedShapeLogicalBoundingBox() const { return computedShape()->shapePaddingLogicalBoundingBox(); } Add OVERRIDE makro at the end. > Source/WebCore/rendering/ExclusionShapeOutsideInfo.h:55 > + virtual FloatRect computedShapeLogicalBoundingBox() const { return computedShape()->shapeMarginLogicalBoundingBox(); } Ditto.
Hans Muller
Comment 6 2013-04-01 12:06:42 PDT
Created attachment 195999 [details] Patch Made the changes Dirk suggested.
WebKit Review Bot
Comment 7 2013-04-01 22:38:24 PDT
Comment on attachment 195999 [details] Patch Clearing flags on attachment: 195999 Committed r147384: <http://trac.webkit.org/changeset/147384>
WebKit Review Bot
Comment 8 2013-04-01 22:38:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.