Source/WebCore/rendering/ExclusionShapeInsideInfo.h
@@ -97,6 +97,9 @@ public:
     void setNeedsLayout(bool value) { m_needsLayout = value; }
     bool needsLayout() { return m_needsLayout; }
 
+protected:
+    virtual FloatRect computedShapeLogicalBoundingBox() const OVERRIDE { return computedShape()->shapePaddingLogicalBoundingBox(); }
+
 private:
     ExclusionShapeInsideInfo(const RenderBlock* renderer)
     : ExclusionShapeInfo<RenderBlock, &RenderStyle::resolvedShapeInside, &ExclusionShape::getIncludedIntervals> (renderer)
